fix styling, add classname prop to button component, book new meeting button does not overlap

--- a/app/dashboard/dashboard.scss
+++ b/app/dashboard/dashboard.scss
@@ -5,13 +5,12 @@
     padding: 1rem;
     display: grid;
     grid-template-columns: 3fr 2fr;
-    grid-template-rows: 1fr 10fr 10fr;
-    column-gap: 2rem;
-    row-gap: 2rem;
+    grid-template-rows: 1fr auto auto;
+    column-gap: 2.5rem;
+    row-gap: 2.5rem;
 
     h1 {
         text-align: left;
-
     }
 
     .upcoming-meetings-wrapper {
@@ -20,16 +19,15 @@
         grid-row-start: 2;
         grid-row-end: 3;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-        position: relative;
 
         upcoming-meetings {
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
         }
 
-        button {
-            position: absolute;
-            bottom: 15px;
-            right: 15px;
+        .new-meeting-btn {
+            float: right;
+            margin-right: 15px;
+            margin-bottom: 15px;
         }
     }
 
@@ -62,8 +60,9 @@
     .button {
         padding: 0.5rem 1rem;
         border: none;
-        margin: 5px;
+        margin: 0;
         border-radius: 5px;
         font-size: 0.75rem;
+        margin-bottom: 1rem;
     }
 }
